MESSAGE("${PROJECT_SOURCE_DIR}")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/hueplusplus/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/leap/include)

LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/leap)

FILE(GLOB SRCS *.cpp)

ADD_EXECUTABLE(leaphue ${SRCS})
set_property(TARGET leaphue PROPERTY CXX_STANDARD 11)
TARGET_LINK_LIBRARIES(leaphue hueplusplusstatic Leap)
